--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -144,7 +144,7 @@ opacity: 0;
 }
 
 #home{
-  background: url("/assets/images/banner.jpg") no-repeat;
+  background: url("../images/banner.jpg") no-repeat;
   background-size: cover;
   height: 100vh;
   background-repeat: no-repeat;
